sandbox/output
AnagramTest.java:10: error: cannot find symbol
        assertThat(Anagram.of("a"), is(Arrays.asList("a")));
                   ^
  symbol:   variable Anagram
  location: class AnagramTest
AnagramTest.java:15: error: cannot find symbol
        assertThat(Anagram.of("ab"), is(Arrays.asList("ab", "ba")));
                   ^
  symbol:   variable Anagram
  location: class AnagramTest
AnagramTest.java:20: error: cannot find symbol
        assertThat(Anagram.of("abc"), is(Arrays.asList("abc", "acb", "bac", "bca", "cab", "cba")));
                   ^
  symbol:   variable Anagram
  location: class AnagramTest
3 errors
